--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -297,8 +297,8 @@
         <div class="heart"><img id="progress" src="~/images/novasaydam.png" style="max-width:15vw" /></div>
     </div>
     <div class="container-fluid mt-2" style="min-height:88%">
-        <div class="row">
-            <div class="col d-flex">
+        <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-sm-auto d-flex">
                 <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                     <input type="radio" class="btn-check" name="uretim-islem" id="uretimealrd" onclick="change(parseInt(this.value))" value="1" autocomplete="off">
                     <label class="btn btn-outline-primary openlbl" for="uretimealrd">ÜRETİME AL</label>
@@ -313,17 +313,17 @@
                     <label class="btn btn-outline-primary" for="uretimegirenlerrd">ÜRETİME GİRENLER</label>
                 </div>
             </div>
-            <div class="col d-flex" id="barkodbuttoncol">
-                <button type="button" id="BarkodButton" onclick="BarkodModal()" class="btn btn-primary showmodal" style="width:12%;" data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<span>Barkod</span>"><i class="bi bi-qr-code-scan"></i></button>
+            <div class="col-sm-auto d-flex" id="barkodbuttoncol">
+                <button type="button" id="BarkodButton" onclick="BarkodModal()" class="btn btn-primary showmodal" style="width:50px;" data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<span>Barkod</span>"><i class="bi bi-qr-code-scan"></i></button>
             </div>
         </div>
 
         <div class="row" style="min-height:100%;overflow-y:auto;">
             <div class="col">
                 <div class="row mt-4" style="max-width:100vw">
-                    <div class="col">
-                        <div id="BekleyenIsEmirleriMakine" style="max-width:50vw;display:none;"> </div>
-                        <div id="UretimeGirenlerMakine" style="max-width:50vw;display:none;"> </div>
+                    <div class="col d-flex justify-content-center align-items-center">
+                        <div id="BekleyenIsEmirleriMakine" style="max-width: 65vw; width: 65vw; display: none;"> </div>
+                        <div id="UretimeGirenlerMakine" style="max-width: 65vw; width: 65vw; display: none;"> </div>
                         <div class="btn-group" role="group" aria-label="Basic radio toggle button group" id="makineler">
 
                         </div>
