--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -32,6 +32,9 @@
         input {
             background-color: transparent !important;
         }
+            input:focus {
+                outline: none;
+            }
 
         .centercontent {
             position: absolute;
