--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -2744,7 +2744,7 @@
             $.ajax({
      url: '@Url.Action("IkinciKalite", "Uretim")',
      type: 'POST',
-     data: { "hatkodu": hat, "stokkodu": stok, "genislik": (genislik == "null" ? null : genislik.toString().trim()), "mik1": $("#miktar11").val().toString().trim(), "mik2": $("#miktar22").val().toString().trim(),"stokadi":stokadi ,"tip":e},
+                data: { "hatkodu": hat, "stokkodu": stok, "genislik": (genislik == "null" ? null : genislik.toString().trim()), "mik1": $("#miktar11").val().toString().trim(), "mik2": $("#miktar22").val().toString().trim(), "stokadi": stokadi, "tip": e,"uretimSonuKaydindanMi":false},
      error: function (data) {
          console.log(data);
          $("#progress2").hide();
